# libtz

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  configure.ac  configure.in
src/: Makefile.am  localtime.c  tz.h
tests/: Makefile.am  check_libtz  check_libtz.c
